<resources>
    <string name="app_name" translatable="false">Flags Game of All Countries</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="became_a_flag_master_today">Became a Flag Master Today!</string>
    <string name="Avatar_is_Usable">Avatar_is_Usable</string>
    <string name="flags_game">Flags Game</string>
    <string name="Points">Points</string>
    <string name="name_and_avatar">Name and Avatar</string>
    <string name="mute_or_unmute">Mute Or UnMute</string>
    <string name="setting_icon" translatable="false">setting Icon</string>
    <string name="game_services_project_id" translatable="false"> 578522315755 </string>
    <string name="leaderboard_id" translatable="false">CgkI6_f3lOsQEAIQBA</string>
    <string name="Google_id" translatable="false">578522315755-17o5i3uhpp124lr5ssrhvokptpjivoca.apps.googleusercontent.com</string>
    <string name="Google_id2" translatable="false">578522315755-17o5i3uhpp124lr5ssrhvokptpjivoca.apps.googleusercontent.com</string>
    <string name="points">Points:</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="user_name">User Name</string>
    <string name="todo1" translatable="false">TODO</string>
    <string name="_20_points">20 Points</string>
    <string name="_10_points">10 Points</string>
    <string name="_30_points">30 Points</string>
    <string name="_50_points">50 Points</string>
    <string name="_40_points">40 Points</string>
    <string name="_60_points">60 Points</string>
    <string name="_80_points">80 Points</string>
    <string name="_70_points">70 Points</string>
    <string name="_90_points">90 Points</string>
    <string name="press_to_buy">Press to Buy</string>
    <string name="_110_points">110 Points</string>
    <string name="_100_points">100 Points</string>
    <string name="_120_points">120 Points</string>
    <string name="not_available">Not Available</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_as_guest">Enter As Guest</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="sign_up">SIGN UP</string>
    <string name="become_a_flag_master_today">become a flag master today</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="logout">Logout</string>
    <string name="enter_game">Enter Game</string>
    <string name="novice">Novice</string>
    <string name="learner">Learner</string>
    <string name="apprentice">Apprentice</string>
    <string name="competent">Competent</string>
    <string name="champion">Champion</string>
    <string name="expert">Expert</string>
    <string name="master">Master</string>
    <string name="legendary">Legendary</string>
    <string name="divine">Divine</string>
    <string name="master_yoda">Master Yoda</string>
    <string name="baby_yoda">Baby Yoda</string>
    <string name="Level1">Level 1</string>
    <string name="Level2">Level 2</string>
    <string name="Level3">Level 3</string>
    <string name="Level4">Level 4</string>
    <string name="Level5">Level 5</string>
    <string name="multiplayer">MultiPlayer</string>
    <string name="register">register</string>
    <string name="go_to_login">Go To login</string>
    <string name="you_won_a_secret_avatar_press_avatar_to_use">You Won A Secret Avatar! Press Avatar to Use</string>
    <string name="about">About</string>
    <string name="easter_egg">Easter Egg</string>
    <string name="reset_game_scores">Reset game scores</string>
</resources>