<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/RlMainMenu"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignIn">

    <ImageView
        android:layout_width="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/new_icon_flag_circle"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="@string/sign_up"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />






    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/signin"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/edit_email2"
        tools:ignore="MissingConstraints"

       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_bg"
            android:drawablePadding="20dp"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/email"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email2"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_bg"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="20dp"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:fontFamily="@font/alfa_slab_one"
        android:textSize="18sp"
        android:padding="5dp"
        android:text="@string/login" />



    <Button
        android:id="@+id/btnEnterNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alfa_slab_one"

        android:text="@string/enter_as_guest"
        android:textColor="@color/white"
        android:backgroundTint="@color/design_default_color_secondary"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialicons"
        android:layout_centerHorizontal="true"
        android:textColor="#FF657985"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/or_sign_in_with" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicons"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:id="@+id/sign_in_button"
            android:src="@drawable/google"
            tools:ignore="ContentDescription" />


    </LinearLayout>


</RelativeLayout>